# mtg-decks

./: Cargo.toml  README.md  rashmi-and-ragavan-treasures.txt
client/: TODO.md  index.html  package-lock.json  package.json  tailwind.config.js
client/src/: App.tsx  index.css
client/src/components/: CardDisplay.tsx  DeckDiff.tsx  DeckInput.tsx  DeckStats.tsx  ErrorDisplay.tsx  ThemeToggle.tsx
client/src/contexts/: ThemeContext.tsx
client/src/lib/: cardUtils.ts
client/src/services/: api.ts
client/src/types/: api.ts
decks/: katara-ally-tribal  katara-ally-tribal.txt  rashmi-and-ragavan-treasures.txt
mtg-deck-diff-server/: Cargo.toml
mtg-deck-diff-server/src/: cards.rs  deck.rs  main.rs  server.rs
server/: Cargo.toml
server/src/: main.rs  server.rs
src/: main.rs
