[package]
name = "mtg-deck-difftool"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.225"
sonic-rs = "0.5"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10"
tower-http = { version = "0.6.6", features = ["cors"] }
